including all drivers

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,5 +1,4 @@
 INCLUDE_DRIVERS = -I.
 DRIVERS_CPP_FILES =
 
-include $(PWD)/drivers/DHTLib/Makefile
-include $(PWD)/drivers/LiquidCrystal/Makefile
+include $(PWD)/drivers/*/Makefile
