--- a/config
+++ b/config
@@ -1,5 +1,6 @@
-upload=y
-A_PORT=/dev/ttyUSB0
+CONFIG_UPLOAD=y
+CONFIG_PORT=/dev/ttyUSB0
+
 # Boardy type: use "arduino" for Uno or "stk500v1" for Duemilanove
 BOARD_TYPE=arduino
 # Baud-rate: use "115200" for Uno or "19200" for Duemilanove
