Set drivers optionally included

--- a/drivers/LiquidCrystal/Makefile
+++ b/drivers/LiquidCrystal/Makefile
@@ -1,2 +1,4 @@
-INCLUDE += -I$(PWD)/drivers/LiquidCrystal
-DRIVERS_CPP_FILES += LiquidCrystal
+ifeq ($(CONFIG_liquiddisplay),y)
+   INCLUDE += -I$(PWD)/drivers/LiquidCrystal
+   DRIVERS_CPP_FILES += LiquidCrystal
+endif
