--- a/drivers/DHTLib/Makefile
+++ b/drivers/DHTLib/Makefile
@@ -1,3 +1,5 @@
-INCLUDE += -I$(PWD)/drivers/DHTLib
-DRIVERS_CPP_FILES += dht
+ifeq ($(CONFIG_DHT11),y)
+   INCLUDE += -I$(PWD)/drivers/DHTLib
+   DRIVERS_CPP_FILES += dht
+endif
 
